--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,8 +2,7 @@
 <div class="all">
     <div class="header">
         <ul class = "navList">
-            <li><img src="../assets/ice-cubes.png" style="margin-right: 5%;"><a href = "/home">TheIceStore</a></li>
-            <li><a href = "/home">FAQ</a></li>
+            <li><img src="../assets/ice-cubes.png" style="margin-right: 5%;"><a href = "/home" style="font-weight:bolder; color: blue;">The Ice Store</a></li>
         </ul>
     </div>
     <div class="center">
@@ -12,16 +11,25 @@
                 <span>Find rare luxury clothing items</span>
             </div>
             <div class="panelB">
-                <span>Find rare items from trusted vendors selected from our application process. Get fair prices for all luxury items. Yeezys, Northface, Gucci much more</span>
+                <span>Find rare items from trusted vendors selected from our strict application process. Find the luxury items that never seem to be in stock. <span style="font-weight: bolder;">Yeezys</span>, <span style="font-weight: bolder;">Northface</span>, <span style="font-weight: bolder;">Gucci</span> and much more</span>
             </div>
             <div class="panelC">
-                <input type="email" name="" id="">
-                <button>Subscribe</button>
+                <form action="https://gmail.us7.list-manage.com/subscribe/post?u=9d29dd6ceaa6c32910256280a&amp;id=282e9dbb74" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                    <span>Enter your email to be notified when we launch so you can get the best deals before they are gone!</span>
+                    <input type="email" name="EMAIL"  id="mce-EMAIL" class="input" placeholder="Enter email">
+                    <div id="mce-responses" class="clear foot">
+                        <div class="response" id="mce-error-response" style="display:none"></div>
+                        <div class="response" id="mce-success-response" style="display:none"></div>
+                    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="createBtn">
+                </form>
             </div>
        </div>
        <div class="right">
             <div class="picSlider">
-                
+                <div class="slide">
+                    <img src="../assets/ad.gif">
+                </div>
             </div>
        </div>
     </div>
