--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,39 +1,27 @@
-
-<div class="all">
-    <div class="header">
-        <ul class = "navList">
-            <li><img src="../assets/ice-cubes.png" style="margin-right: 5%;"><a href = "/home" style="font-weight:bolder; color: blue;">The Ice Store</a></li>
-        </ul>
-    </div>
-    <div class="center">
-       <div class="left">
-            <div class="panelA">
-                <span>Find rare luxury clothing items</span>
-            </div>
-            <div class="panelB">
-                <span>Find rare items from trusted vendors selected from our strict application process. Find the luxury items that never seem to be in stock. <span style="font-weight: bolder;">Yeezys</span>, <span style="font-weight: bolder;">Northface</span>, <span style="font-weight: bolder;">Gucci</span> and much more</span>
-            </div>
-            <div class="panelC">
-                <form action="https://gmail.us7.list-manage.com/subscribe/post?u=9d29dd6ceaa6c32910256280a&amp;id=282e9dbb74" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                    <span>Enter your email to be notified when we launch so you can get the best deals before they are gone!</span>
-                    <input type="email" name="EMAIL"  id="mce-EMAIL" class="input" placeholder="Enter email">
-                    <div id="mce-responses" class="clear foot">
-                        <div class="response" id="mce-error-response" style="display:none"></div>
-                        <div class="response" id="mce-success-response" style="display:none"></div>
-                    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="createBtn">
-                </form>
-            </div>
-       </div>
-       <div class="right">
-            <div class="picSlider">
-                <div class="slide">
-                    <img src="../assets/ad.gif">
-                </div>
-            </div>
-       </div>
-    </div>
-    <footer>
-        <span>© TheIceStore 2021</span>
-    </footer>
-</div>
+<html>
+  <header></header>
+  <body>
+    <section class="landing">
+      <div class="header">
+        <div class="logo">
+          <h1>Acutis Dev</h1>
+        </div>
+        <div class="hamburger">
+            <span>MENU</span>
+        </div>
+      </div>
+      <div class="landingText">
+        <div class="landingTitle">
+          <h1>Small Business Web Design + Development</h1>
+        </div>
+        <div class="landingSubtitle">
+        <h5>No page builders or WordPress - We offer 100% hand-coded websites with superior results starting at $150/mo</h5>
+        </div>
+      </div>
+      <div class="landingButton">
+      <button class="button-6" role="button">GET IN TOUCH!</button>
+      </div>
+    </section>
+  </body>
+  <footer></footer>
+</html>
