--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,11 +1,8 @@
-* {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+
 .landing {
   height: 580px;
   width: 100%;
-  background-color:blue;
+  background-color:darkblue;
 }
 .header{
   display: flex;
@@ -20,6 +17,7 @@
 .landingText{
   color: white;
   width: 100%;
+
 }
 .landingTitle,.landingSubtitle{
   display: flex;
@@ -29,12 +27,13 @@
 .landingTitle{
   margin-left: 5%;
   font-weight: bolder;
+  font-family: poppins-bold;
 }
 .landingSubtitle{
   margin: 30px 0px;
   margin-left: 5%;
-  font-weight: 100;
   width: 80%;
+  font-family: poppins-light;
 }
 .button-6 {
   align-items: center;
@@ -73,4 +72,86 @@
 
 .button-6:hover {
   transform: translateY(-1px);
+}
+.landingLeft{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.landingImage img{
+  width: 90%;
+  z-index: 10;
+  position: relative;
+}
+.landingImage{
+  margin: 20px 0px 10px 0;
+}
+.curve{
+  width: 100%;
+}
+.curve img{
+  width: 100%;
+  position:absolute;
+  bottom: -2px;
+  transform: scaleX(-1);
+  z-index: 2;
+}
+.landing{
+  position: relative;
+}
+@media (min-width: 900px) {
+  .landingLeft{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .landingRight{
+    width: 50%;
+  }
+  .landingImage img{
+    width: 100%;
+    z-index: 10;
+  }
+  .landingText{
+    width: 50%;
+  }
+  .welcome{
+    display: flex;
+    width: 100%;
+  }
+  .curve img{
+    width: 100%;
+    height: auto;
+    height: 30%;
+    bottom: 0%;
+    position:absolute;
+    transform: scaleX(-1);
+    z-index: 2;
+  }
+}
+@media (min-width: 1400px) {
+  .curve img{
+    width: 100%;
+    height: 30%;
+    bottom: -5%;
+    position:absolute;
+    transform: scaleX(-1);
+    z-index: 2;
+  }
+}
+
+@font-face {
+  font-family: 'poppins';
+  src: url('/assets/Poppins-Medium.ttf');
+}
+@font-face {
+  font-family: 'poppins-light';
+  src: url('/assets/Poppins-Light.ttf');
+}
+@font-face {
+  font-family: 'poppins-bold';
+  src: url('/assets/Poppins-Bold.ttf');
 }
