--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,17 +10,30 @@
             <span>MENU</span>
         </div>
       </div>
-      <div class="landingText">
-        <div class="landingTitle">
-          <h1>Small Business Web Design + Development</h1>
+      <div class="welcome">
+        <div class="landingLeft">
+          <div class="landingText">
+            <div class="landingTitle">
+              <h1>Small Business Web Design + Development</h1>
+            </div>
+            <div class="landingSubtitle">
+            <h5>No page builders or WordPress - We offer 100% hand-coded websites with superior results starting at $150/mo</h5>
+            </div>
+          </div>
+          <div class="landingButton">
+          <button class="button-6" role="button">GET IN TOUCH!</button>
+          </div>
         </div>
-        <div class="landingSubtitle">
-        <h5>No page builders or WordPress - We offer 100% hand-coded websites with superior results starting at $150/mo</h5>
+        <div class ="landingRight">
+          <div class="landingImage">
+            <img src="/assets/Product-Launch.png">
+          </div>
         </div>
       </div>
-      <div class="landingButton">
-      <button class="button-6" role="button">GET IN TOUCH!</button>
+      <div class="curve">
+        <img src="/assets/curve2.png">
       </div>
+      
     </section>
   </body>
   <footer></footer>
