--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -25,7 +25,7 @@
   text-align: center;
 }
 .landingTitle{
-  margin-left: 5%;
+  width: 100%;
   font-weight: bolder;
   font-family: poppins-bold;
 }
