--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,35 +1,37 @@
-
+*{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 .landing {
   height: 580px;
   width: 100%;
-  background-color:darkblue;
+  background-color: darkblue;
 }
-.header{
+.header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-.header h1{
+.header h1 {
   margin: 0;
   padding: 10px;
   color: white;
 }
-.landingText{
+.landingText {
   color: white;
   width: 100%;
-
 }
-.landingTitle,.landingSubtitle{
+.landingTitle,
+.landingSubtitle {
   display: flex;
   flex-direction: column;
   text-align: center;
 }
-.landingTitle{
+.landingTitle {
   width: 100%;
   font-weight: bolder;
   font-family: poppins-bold;
 }
-.landingSubtitle{
+.landingSubtitle {
   margin: 30px 0px;
   margin-left: 5%;
   width: 80%;
@@ -37,22 +39,23 @@
 }
 .button-6 {
   align-items: center;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: .25rem;
+  border-radius: 0.25rem;
   box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
   box-sizing: border-box;
   color: rgba(0, 0, 0, 0.85);
   cursor: pointer;
   display: inline-flex;
-  font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: system-ui, -apple-system, system-ui, 'Helvetica Neue', Helvetica,
+    Arial, sans-serif;
   font-size: 16px;
   font-weight: 600;
   justify-content: center;
   line-height: 1.25;
   margin: 10px;
   min-height: 3rem;
-  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
+  padding: calc(0.875rem - 1px) calc(1.5rem - 1px);
   position: relative;
   text-decoration: none;
   transition: all 250ms;
@@ -73,71 +76,114 @@
 .button-6:hover {
   transform: translateY(-1px);
 }
-.landingLeft{
+.landingLeft {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.landingImage img{
+.landingImage img {
   width: 90%;
   z-index: 10;
   position: relative;
 }
-.landingImage{
+.landingImage {
   margin: 20px 0px 10px 0;
 }
-.curve{
+.curve {
   width: 100%;
 }
-.curve img{
+.curve img {
   width: 100%;
-  position:absolute;
+  position: absolute;
   bottom: -2px;
   transform: scaleX(-1);
   z-index: 2;
 }
-.landing{
+.landing {
   position: relative;
 }
+/* DESCRIPTION */
+.dash {
+  width: 160px;
+  border-bottom: 1px dashed blue;
+  margin: 10px 0px 30px 0px;
+}
+.descTitle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+.descTitleText {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  text-align: center;
+}
+.descTitle h1 {
+  margin: 0;
+}
+.descPara{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+.descPara p{
+  margin: 0px 0px 50px;
+}
+.item{
+  width: 90%;
+  margin-left: 5%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-bottom: 80px;
+}
+.item h3{
+  margin: 5px 0px 5px 0px;
+}
 @media (min-width: 900px) {
-  .landingLeft{
+  .landingLeft {
     width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
-  .landingRight{
+  .landingRight {
     width: 50%;
   }
-  .landingImage img{
+  .landingImage img {
     width: 100%;
     z-index: 10;
   }
-  .landingText{
+  .landingText {
     width: 50%;
   }
-  .welcome{
+  .welcome {
     display: flex;
     width: 100%;
   }
-  .curve img{
+  .curve img {
     width: 100%;
     height: auto;
     height: 30%;
     bottom: 0%;
-    position:absolute;
+    position: absolute;
     transform: scaleX(-1);
     z-index: 2;
   }
+  /* DESCRIPTION SECTION */
 }
 @media (min-width: 1400px) {
-  .curve img{
+  .curve img {
     width: 100%;
     height: 30%;
     bottom: -5%;
-    position:absolute;
+    position: absolute;
     transform: scaleX(-1);
     z-index: 2;
   }
