--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,7 +35,37 @@
       </div>
       
     </section>
-
+    <section class="description">
+      <div class="descTitle">
+        <div class="descTitleText">
+          <h1 style="color:blue;margin-right:5px">WHAT</h1> <h1>WE DO</h1>
+        </div>
+        <div class="dash">
+        </div>
+      </div>
+      <div class="descPara">
+        <p>
+        We specialize in small business web design and development for clients anywhere in Ireland. Every line of code is written by hand to ensure the best performance, which helps bring in more customers to your site and bring more revenue to your business. <a>Learn more</a>
+        </p>
+      </div>
+      <div class="what-we-do-container">
+        <div class="item">
+          <h1>📱</h1>
+          <h3>Mobile First Design</h3>
+          <p>We start by building and optimizing the site for mobiles first, we then add more code to make the website to make it desktop friendly </p>
+        </div>
+        <div class="item">
+        <h1>📱</h1>
+        <h3>Mobile First Design</h3>
+        <p>We start by building and optimizing the site for mobiles first, we then add more code to make the website to make it desktop friendly </p>
+      </div>
+      <div class="item">
+      <h1>📱</h1>
+      <h3>Mobile First Design</h3>
+      <p>We start by building and optimizing the site for mobiles first, we then add more code to make the website to make it desktop friendly </p>
+    </div>
+      </div>
+    </section>
     
   </body>
   <footer></footer>
