--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
           <h1>Acutis Dev</h1>
         </div>
         <div class="hamburger">
-            <span>MENU</span>
+          <span>MENU</span>
         </div>
       </div>
       <div class="welcome">
@@ -17,56 +17,122 @@
               <h1>Small Business Web Design + Development</h1>
             </div>
             <div class="landingSubtitle">
-            <h5>No page builders or WordPress - We offer 100% hand-coded websites with superior results starting at $150/mo</h5>
+              <h5>
+                No page builders or WordPress - We offer 100% hand-coded
+                websites with superior results starting at $150/mo
+              </h5>
             </div>
           </div>
           <div class="landingButton">
-          <button class="button-6" role="button">GET IN TOUCH!</button>
+            <button class="button-6" role="button">GET IN TOUCH!</button>
           </div>
         </div>
-        <div class ="landingRight">
+        <div class="landingRight">
           <div class="landingImage">
-            <img src="/assets/Product-Launch.png">
+            <img src="/assets/Product-Launch.png" />
           </div>
         </div>
       </div>
       <div class="curve">
-        <img src="/assets/curve2.png">
+        <img src="/assets/curve2.png" />
       </div>
-      
     </section>
     <section class="description">
       <div class="descTitle">
         <div class="descTitleText">
-          <h1 style="color:blue;margin-right:5px">WHAT</h1> <h1>WE DO</h1>
+          <h1 style="color:blue;margin-right:5px">WHAT</h1>
+          <h1>WE DO</h1>
         </div>
-        <div class="dash">
-        </div>
+        <div class="dash"></div>
       </div>
       <div class="descPara">
         <p>
-        We specialize in small business web design and development for clients anywhere in Ireland. Every line of code is written by hand to ensure the best performance, which helps bring in more customers to your site and bring more revenue to your business. <a>Learn more</a>
+          We specialize in small business web design and development for clients
+          anywhere in Ireland. Every line of code is written by hand to ensure
+          the best performance, which helps bring in more customers to your site
+          and bring more revenue to your business. <a>Learn more</a>
         </p>
       </div>
       <div class="what-we-do-container">
         <div class="item">
           <h1>📱</h1>
           <h3>Mobile First Design</h3>
-          <p>We start by building and optimizing the site for mobiles first, we then add more code to make the website to make it desktop friendly </p>
+          <p>
+            We start by building and optimizing the site for mobiles first, we
+            then add more code to make the website to make it desktop friendly
+          </p>
         </div>
         <div class="item">
-        <h1>📱</h1>
-        <h3>Mobile First Design</h3>
-        <p>We start by building and optimizing the site for mobiles first, we then add more code to make the website to make it desktop friendly </p>
-      </div>
-      <div class="item">
-      <h1>📱</h1>
-      <h3>Mobile First Design</h3>
-      <p>We start by building and optimizing the site for mobiles first, we then add more code to make the website to make it desktop friendly </p>
-    </div>
+          <h1>📱</h1>
+          <h3>Search Engine Optimized</h3>
+          <p>
+            57% of all internet traffic is on mobile devices, so we optimize
+            your mobile to perform their best in search engines.
+          </p>
+        </div>
+        <div class="item">
+          <h1>📱</h1>
+          <h3>Fully Responsive</h3>
+          <p>
+            Your website will fit all mobile screens sizes, tablets, and desktop
+            sizes so new clients can access your site from anywhere.
+          </p>
+        </div>
       </div>
     </section>
-    
+    <section class="pricing">
+      <img src="" />
+      <div class="container">
+        <div class="right">
+          <div class="pricingText">
+            <h2>
+              <span>$0</span> down, <span>$150</span> per month, <br />No
+              minimum contract
+            </h2>
+            <p>
+              $0 down for a standard 5 page small business website. If you need
+              more than that then we have to do custom pricing based on the
+              scope of work, number of additional pages, and time involved.
+              <br />
+              <br />
+              You own your domain, content, listing, and profiles. Cancel
+              anytime with no fees or hassle.
+            </p>
+          </div>
+          <div class="list-group">
+
+            <div class="list-item">
+            <!--SVG-->
+              <div class="list-item-content">
+                  <h3>Hosting Fees Included</h3>
+                  <p>Hosting fees are built right into the monthly payment.</p>
+              </div>
+            </div>
+            <div class="list-item">
+            <!--SVG-->
+              <div class="list-item-content">
+                  <h3>Hosting Fees Included</h3>
+                  <p>Hosting fees are built right into the monthly payment.</p>
+              </div>
+            </div>
+            <div class="list-item">
+            <!--SVG-->
+              <div class="list-item-content">
+                  <h3>Hosting Fees Included</h3>
+                  <p>Hosting fees are built right into the monthly payment.</p>
+              </div>
+            </div>
+            <div class="list-item">
+            </div>
+            <div class="list-item">
+            </div>
+            <div class="list-item">
+            </div>
+          </div>
+        </div>
+          ..
+      </div>
+    </section>
   </body>
   <footer></footer>
 </html>
