--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -29,7 +29,7 @@
         </div>
         <div class="landingRight">
           <div class="landingImage">
-            <img src="/assets/Product-Launch.png" />
+            <img src="/assets/smart.png" />
           </div>
         </div>
       </div>
@@ -54,41 +54,46 @@
         </p>
       </div>
       <div class="what-we-do-container">
-        <div class="item">
-          <h1>📱</h1>
-          <h3>Mobile First Design</h3>
-          <p>
-            We start by building and optimizing the site for mobiles first, we
-            then add more code to make the website to make it desktop friendly
-          </p>
+        <div class="itemsList">
+          <div class="item">
+            <img src = "/assets/smartphone.png">
+            <h3>Mobile First Design</h3>
+            <p>
+              We start by building and optimizing the site for mobiles first, we
+              then add more code to make the website to make it desktop friendly
+            </p>
+          </div>
+          <div class="item">
+            <img src = "/assets/pie-chart.png">
+            <h3>Search Engine Optimized</h3>
+            <p>
+              57% of all internet traffic is on mobile devices, so we optimize
+              your mobile to perform their best in search engines.
+            </p>
+          </div>
+          <div class="item">
+            <img src = "/assets/desktop.png">
+            <h3>Fully Responsive</h3>
+            <p>
+              Your website will fit all mobile screens sizes, tablets, and desktop
+              sizes so new clients can access your site from anywhere.
+            </p>
+          </div>
         </div>
-        <div class="item">
-          <h1>📱</h1>
-          <h3>Search Engine Optimized</h3>
-          <p>
-            57% of all internet traffic is on mobile devices, so we optimize
-            your mobile to perform their best in search engines.
-          </p>
-        </div>
-        <div class="item">
-          <h1>📱</h1>
-          <h3>Fully Responsive</h3>
-          <p>
-            Your website will fit all mobile screens sizes, tablets, and desktop
-            sizes so new clients can access your site from anywhere.
-          </p>
-        </div>
+        
       </div>
     </section>
-    <section class="pricing">
-      <img src="" />
+    <section id = "pricing" class="pricing">
+      <div class="pricingImage">
+        <img src = "/assets/Product-Launch.png">
+      </div>
       <div class="container">
         <div class="right">
           <div class="pricingText">
-            <h2>
+            <h1>
               <span>$0</span> down, <span>$150</span> per month, <br />No
               minimum contract
-            </h2>
+            </h1>
             <p>
               $0 down for a standard 5 page small business website. If you need
               more than that then we have to do custom pricing based on the
@@ -100,34 +105,53 @@
             </p>
           </div>
           <div class="list-group">
-
-            <div class="list-item">
-            <!--SVG-->
-              <div class="list-item-content">
-                  <h3>Hosting Fees Included</h3>
-                  <p>Hosting fees are built right into the monthly payment.</p>
-              </div>
+            <div class="leftList">
+              <div class="list-item">
+                <!--SVG-->
+                  <div class="list-item-content">
+                      <h3>Hosting Fees Included</h3>
+                      <p>Hosting fees are built right into the monthly payment.</p>
+                  </div>
+                </div>
+                <div class="list-item">
+                <!--SVG-->
+                  <div class="list-item-content">
+                      <h3>Hosting Fees Included</h3>
+                      <p>Hosting fees are built right into the monthly payment.</p>
+                  </div>
+                </div>
+                <div class="list-item">
+                <!--SVG-->
+                  <div class="list-item-content">
+                      <h3>Hosting Fees Included</h3>
+                      <p>Hosting fees are built right into the monthly payment.</p>
+                  </div>
+                </div>
             </div>
-            <div class="list-item">
-            <!--SVG-->
-              <div class="list-item-content">
-                  <h3>Hosting Fees Included</h3>
-                  <p>Hosting fees are built right into the monthly payment.</p>
-              </div>
+            <div class="rightList">
+              <div class="list-item">
+                <!--SVG-->
+                  <div class="list-item-content">
+                      <h3>Hosting Fees Included</h3>
+                      <p>Hosting fees are built right into the monthly payment.</p>
+                  </div>
+                </div>
+                <div class="list-item">
+                <!--SVG-->
+                  <div class="list-item-content">
+                      <h3>Hosting Fees Included</h3>
+                      <p>Hosting fees are built right into the monthly payment.</p>
+                  </div>
+                </div>
+                <div class="list-item">
+                <!--SVG-->
+                  <div class="list-item-content">
+                      <h3>Hosting Fees Included</h3>
+                      <p>Hosting fees are built right into the monthly payment.</p>
+                  </div>
+                </div>
             </div>
-            <div class="list-item">
-            <!--SVG-->
-              <div class="list-item-content">
-                  <h3>Hosting Fees Included</h3>
-                  <p>Hosting fees are built right into the monthly payment.</p>
-              </div>
-            </div>
-            <div class="list-item">
-            </div>
-            <div class="list-item">
-            </div>
-            <div class="list-item">
-            </div>
+            
           </div>
         </div>
           ..
