--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,4 @@
-*{
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+
 .landing {
   height: 580px;
   width: 100%;
@@ -83,12 +81,13 @@
   align-items: center;
 }
 .landingImage img {
-  width: 90%;
+  width: 100%;
   z-index: 10;
   position: relative;
+  margin: auto;
 }
 .landingImage {
-  margin: 20px 0px 10px 0;
+  margin: 20px 0px 10px 0px;
 }
 .curve {
   width: 100%;
@@ -99,11 +98,15 @@
   bottom: -2px;
   transform: scaleX(-1);
   z-index: 2;
+  overflow-y: hidden;
 }
 .landing {
   position: relative;
 }
 /* DESCRIPTION */
+.description{
+  margin: 80px 0px;
+}
 .dash {
   width: 160px;
   border-bottom: 1px dashed blue;
@@ -114,6 +117,8 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  font-family: poppins-bold;
+  margin-top: 100px;
 }
 .descTitleText {
   width: 100%;
@@ -121,6 +126,7 @@
   justify-content: center;
   flex-direction: row;
   text-align: center;
+  font-family: poppins-light;
 }
 .descTitle h1 {
   margin: 0;
@@ -131,9 +137,7 @@
   justify-content: center;
   text-align: center;
 }
-.descPara p{
-  margin: 0px 0px 50px;
-}
+
 .item{
   width: 90%;
   margin-left: 5%;
@@ -141,12 +145,34 @@
   flex-direction: column;
   text-align: center;
   margin-bottom: 80px;
+  align-items: center;
+}
+.item img{
+  width: 70px !important;
 }
 .item h3{
   margin: 5px 0px 5px 0px;
+  font-family: poppins-bold;
+}
+p{
+ font-family: poppins-light
+ ; 
+}
+h1{
+  font-family: poppins-bold;
+}
+.what-we-do-container{
+ position: relative;
+}
+.itemsList:before {
+  content: url(/assets/blob1.png);
+  z-index: -1;
+  top: 0;
+  position: absolute;
+  opacity: .1;
 }
 /* Pricing Text */
-h2 span{
+h1 span{
   color: blue;
 }
 .pricingText{
@@ -162,10 +188,62 @@ h2 span{
   padding-left: 42px;
 }
 .list-item h3:before {
-  content: "✔️";
+  content: url(/assets/checks.png);
   position: relative;
   left: -10px;
   height: 30px;
+  max-width: 70px!important;
+}
+.pricing,.container{
+  position: relative;
+}
+.right:before {
+  content: url(/assets/blob1.png);
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  opacity: .1;
+}
+.pricing img{
+  width: 75%;
+  margin-bottom: 80px;
+}
+
+@media (device-width: 768px){
+  h1{
+    font-size: 2em;
+  }
+  h5{
+    font-size: 1em;
+  }
+  .landingImage{
+    margin-left: 20%;
+  }
+  .landingImage img {
+    width: 60%;
+    z-index: 10;
+    position: absolute;
+    margin: auto;
+  }
+  
+}
+@media (device-width: 820px){
+  h1{
+    font-size: 2em;
+  }
+  h5{
+    font-size: 1em;
+  }
+  .landingImage{
+    margin-left: 20%;
+  }
+  .landingImage img {
+    width: 50%;
+    z-index: 10;
+    position: absolute;
+    margin: auto;
+  }
+  
 }
 @media (min-width: 900px) {
   .landingLeft {
@@ -179,8 +257,10 @@ h2 span{
     width: 50%;
   }
   .landingImage img {
-    width: 100%;
+    width: 50%;
     z-index: 10;
+    position: absolute;
+    margin: auto;
   }
   .landingText {
     width: 50%;
@@ -198,7 +278,43 @@ h2 span{
     transform: scaleX(-1);
     z-index: 2;
   }
+  
   /* DESCRIPTION SECTION */
+  .descPara{
+    width: 60%;
+    margin-left: 20%;
+    margin-bottom: 80px;
+  }
+  .itemsList{
+    display: flex;
+    flex-direction: row;
+  }
+  .item{
+    width: 100%;
+    margin: 0 10px;
+  }
+  .pricing{
+    display: flex;
+    width: 100%;
+  }
+  .pricingImage{
+    width: 40%;
+    margin: 0px 0px 0px 20px ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+  }
+  .pricingText{
+    width: 90%;
+  }
+  .container{
+    width: 60%;
+  }
+  .list-group{
+    display: flex;
+    flex-direction: row;
+  }
 }
 @media (min-width: 1400px) {
   .curve img {
@@ -208,6 +324,9 @@ h2 span{
     position: absolute;
     transform: scaleX(-1);
     z-index: 2;
+  }
+  h1{
+    font-size: 2em;
   }
 }
 
