--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -91,17 +91,15 @@
         <div class="right">
           <div class="pricingText">
             <h1>
-              <span>$0</span> down, <span>$150</span> per month, <br />No
-              minimum contract
+              <span>Free</span> sign-up, <span>Expert</span> developer support<br />HD Streaming
             </h1>
             <p>
-              $0 down for a standard 5 page small business website. If you need
-              more than that then we have to do custom pricing based on the
-              scope of work, number of additional pages, and time involved.
+              Get your account setup and integerated with stripe in minutes. We use <span style="color: blue;">Stripe</span> to 
+              process payments.
               <br />
               <br />
-              You own your domain, content, listing, and profiles. Cancel
-              anytime with no fees or hassle.
+              We offer expertise developer support to ensure your event runs as smoothly as possible. Our platform is built
+              to provide viewers and promoters a platform to easily and quickly access PPV's.
             </p>
           </div>
           <div class="list-group">
@@ -109,22 +107,22 @@
               <div class="list-item">
                 <!--SVG-->
                   <div class="list-item-content">
-                      <h3>Hosting Fees Included</h3>
-                      <p>Hosting fees are built right into the monthly payment.</p>
+                      <h3>Developer Event Support</h3>
+                      <p>Live event support from expert software engineers to ensure your stream stays up.</p>
                   </div>
                 </div>
                 <div class="list-item">
                 <!--SVG-->
                   <div class="list-item-content">
-                      <h3>Hosting Fees Included</h3>
-                      <p>Hosting fees are built right into the monthly payment.</p>
+                      <h3>Stripe Integration</h3>
+                      <p>We use Stripe for payment processing.</p>
                   </div>
                 </div>
                 <div class="list-item">
                 <!--SVG-->
                   <div class="list-item-content">
-                      <h3>Hosting Fees Included</h3>
-                      <p>Hosting fees are built right into the monthly payment.</p>
+                      <h3>Large and small events supported</h3>
+                      <p>Host PPV streams for your smaller events to open more avenues for monetization.</p>
                   </div>
                 </div>
             </div>
@@ -132,22 +130,22 @@
               <div class="list-item">
                 <!--SVG-->
                   <div class="list-item-content">
-                      <h3>Hosting Fees Included</h3>
-                      <p>Hosting fees are built right into the monthly payment.</p>
+                      <h3>Premium domain link</h3>
+                      <p>Link to your livestream using our carefully branded link - K1.Live</p>
                   </div>
                 </div>
                 <div class="list-item">
                 <!--SVG-->
                   <div class="list-item-content">
-                      <h3>Hosting Fees Included</h3>
-                      <p>Hosting fees are built right into the monthly payment.</p>
+                      <h3>Full support</h3>
+                      <p>We will help you through the process of starting your own livestream.</p>
                   </div>
                 </div>
                 <div class="list-item">
                 <!--SVG-->
                   <div class="list-item-content">
-                      <h3>Hosting Fees Included</h3>
-                      <p>Hosting fees are built right into the monthly payment.</p>
+                      <h3>Private and secure</h3>
+                      <p>Safe and secure PPV streaming to ensure protection against piracy.</p>
                   </div>
                 </div>
             </div>
@@ -155,6 +153,58 @@
           </div>
         </div>
           ..
+      </div>
+    </section>
+    <section id="who-we-are" class = "who-we-are">
+      <div class="descTitle">
+        <div class="descTitleText">
+          <h1 style="color:blue;margin-right:5px">WHO</h1>
+          <h1>WE ARE</h1>
+        </div>
+        <div class="dash"></div>
+      </div>
+      <div class="descPara">
+        <p>
+          My name is Donal, I am a 24 year old web developer with a BSc in Computer Systems. 
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos cumque consectetur reiciendis praesentium facere quisquam, eos veniam, ad pariatur dicta consequuntur asperiores quaerat quo nobis vero aliquid aspernatur hic maxime, minus eius rerum libero! Eos!.
+        </p>
+      </div>
+      <div class="about-me">
+        <div class="docImage">
+          <img src="/assets/smart.png"/>
+        </div>
+      </div>
+    </section>
+    <section class="prices" id = "prices">
+      <div class="containerPrice">
+        <div class="price-box">
+          <h2>Standard</h2>
+          <span>5 PAGES</span>
+          <h3>150</h3>
+          <ul>
+              <li><img aria-hidden="true" src="https://d33wubrfki0l68.cloudfront.net/608a680adbcdbdfc5b0db51ce6104719aaf2b24b/7080e/images/tick.svg" alt=""> Unlimited Edits</li>
+              <li><img aria-hidden="true" src="https://d33wubrfki0l68.cloudfront.net/608a680adbcdbdfc5b0db51ce6104719aaf2b24b/7080e/images/tick.svg" alt="">Includes Hosting</li>
+              <li><img aria-hidden="true" src="https://d33wubrfki0l68.cloudfront.net/608a680adbcdbdfc5b0db51ce6104719aaf2b24b/7080e/images/tick.svg" alt=""> 24/7 Customer Service</li>
+              <li><img aria-hidden="true" src="https://d33wubrfki0l68.cloudfront.net/608a680adbcdbdfc5b0db51ce6104719aaf2b24b/7080e/images/tick.svg" alt=""> Lifetime Updates</li>
+          </ul>
+          <button class="button-6" onclick="location.href='/html/contact.html'" type="button">
+              CONTACT US
+          </button>
+      </div>
+        <div class="price-box">
+          <h2>Standard + Blogging</h2>
+          <span>STARTING AT</span>
+          <h3>300</h3>
+          <ul>
+              <li><img aria-hidden="true" src="https://d33wubrfki0l68.cloudfront.net/608a680adbcdbdfc5b0db51ce6104719aaf2b24b/7080e/images/tick.svg" alt=""> 1000+ Word Post</li>
+              <li><img aria-hidden="true" src="https://d33wubrfki0l68.cloudfront.net/608a680adbcdbdfc5b0db51ce6104719aaf2b24b/7080e/images/tick.svg" alt=""> Written By an SEO Specialist</li>
+              <li><img aria-hidden="true" src="https://d33wubrfki0l68.cloudfront.net/608a680adbcdbdfc5b0db51ce6104719aaf2b24b/7080e/images/tick.svg" alt=""> 1 Post Per Month</li>
+              <li><img aria-hidden="true" src="https://d33wubrfki0l68.cloudfront.net/608a680adbcdbdfc5b0db51ce6104719aaf2b24b/7080e/images/tick.svg" alt=""> $150 Per Extra Post</li>
+          </ul>
+          <button class="button-6" onclick="location.href='/html/contact.html'" type="button">
+              CONTACT US
+          </button>
+      </div>
       </div>
     </section>
   </body>
